Fixed some colours and dark mode issues

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -17,7 +17,6 @@ section:last-of-type article h3 {
     text-align: center;
     grid-area: auto;
     grid-column-start: span 4;
-
 }
 
 section:last-of-type article p {
@@ -30,6 +29,7 @@ section:last-of-type article p {
 }
 
 section:last-of-type article img {
+    filter: brightness(var(--brightness));
     float: none;
     grid-area: auto;
     height: calc(99% -  1.2em);
@@ -40,11 +40,12 @@ section:last-of-type pre {
 }
 
 section:last-of-type pre img {
+    filter: brightness(var(--brightness));
     width: 50px;
     margin-top: 15px;
 }
 
-section:last-of-type p:last-of-type {
+section:last-of-type>p:last-of-type {
     padding-bottom: 20px;
 }
 
@@ -72,7 +73,7 @@ section:last-of-type p:last-of-type {
     top: 50%;
     width: 50px;
     height: 50px;
-    color: #042f2e;
+    color: var(--font-color);
     font-weight: bold;
     font-size: 30px;
 
@@ -95,7 +96,7 @@ section:last-of-type p:last-of-type {
 
 .back:hover,
 .forward:hover {
-    background-color: #F1F9F7;
+    background-color: var(--card-color);
 }
 
 .dots {
@@ -103,7 +104,7 @@ section:last-of-type p:last-of-type {
     height: 15px;
     width: 15px;
     margin: 10px 3px 0 3px;
-    background-color: #0f766e;
+    background-color: var(--font-highlight-color);
     opacity: 0.3;
     border-radius: 50%;
     display: inline-block;
