--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -34,4 +34,4 @@
   
   .dropdown:hover .dropdown-content {display: block;}
   
-  .dropdown:hover .dropbtn {background-color: var(--font-highlight-color);}
+  .dropdown:hover .dropbtn {background-color: var(--card-color);}
